--- a/character-sheet.html
+++ b/character-sheet.html
@@ -13,16 +13,15 @@
 <div id="characterWrapper">
 
 <header>
+    <a href="index.html">
+        <h1>
+            starwars
+        </h1>
+    </a>
 </header>
     
-<main class="characterMain">
-        <a class="home" href="index.html">
-            <h1 class="pokemonName"></h1>
-        </a>
-        <img src="" alt="" class="pokeImage">
-        <p class="abilitiesList">Abilities: <span class="abilities"></span></p>
-        <p>Type: <span class="pokeTypes"></span></p>
-        <a href="/character.html"></a>
+<main class="theCharacter">
+        
 </main>
 
 
