done maybe hope fully

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div id="wrapper">
     <div class="phone">
     <header>
+        <a href="index.html"><h1>Starwars</h1></a>
     </header>
         
 <main class="indexMain">
